--- a/dobi.yaml
+++ b/dobi.yaml
@@ -584,7 +584,13 @@ job=run-analyzer-deployer-integration-tests:
 job=run-e2e-integration-tests:
   use: grapl-e2e-tests-build
   net-mode: grapl-integration-tests_default
-  command: /bin/bash -c "sleep 30 && source venv/bin/activate && cd grapl_e2e_tests && python3 ./main.py"
+  command: | 
+    /bin/bash -c "
+      wait-for-it grapl-provision:8126 --timeout=60 &&
+      source venv/bin/activate && 
+      cd grapl_e2e_tests && 
+      python3 ./main.py
+      "
   env:
     -  GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
     - "BUCKET_PREFIX=local-grapl"
