--- a/src/rust/generators/osquery-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/osquery-subgraph-generator/Cargo.toml
@@ -19,12 +19,12 @@ failure = "0.1.*"
 log = "0.4.3"
 regex = "1.3.9"
 
-rusoto_s3 = {version="0.43.0", default_features = false, features=["rustls"]}
-rusoto_core = {version="0.43.0", default_features = false, features=["rustls"]}
-rusoto_sqs = {version="0.43.0", default_features = false, features=["rustls"]}
+rusoto_s3 = {version="0.45.0", default_features = false, features=["rustls"]}
+rusoto_core = {version="0.45.0", default_features = false, features=["rustls"]}
+rusoto_sqs = {version="0.45.0", default_features = false, features=["rustls"]}
 
 lambda_runtime = "0.2.*"
 async-trait = "0.1.31"
 zstd = "0.5.1"
 tokio-compat = "0.1.*"
-tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded", "fs"] }
