--- a/dobi.yaml
+++ b/dobi.yaml
@@ -447,7 +447,11 @@ job=run-rust-unit-tests:
 job=run-node-identifier-integration-tests:
   use: rust-build
   net-mode: grapl-integration-tests_default
-  command: /bin/bash -c "sleep 30 && cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration"
+  command: |
+    /bin/bash -c "
+      wait-for-it grapl-provision:8126 --timeout=60 &&
+      cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration
+      "
   env:
     - GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
     - RUST_LOG=INFO
@@ -550,7 +554,13 @@ job=run-grapl-analyzerlib-unit-tests:
 job=run-grapl-analyzerlib-integration-tests:
   use: grapl-analyzerlib-build
   net-mode: grapl-integration-tests_default
-  command: /bin/bash -c "sleep 30 && source venv/bin/activate && cd grapl_analyzerlib && py.test -n auto -m 'integration_test'"
+  command: |
+    /bin/bash -c "
+      wait-for-it grapl-provision:8126 --timeout=60 &&
+      source venv/bin/activate && 
+      cd grapl_analyzerlib && 
+      py.test -n auto -m 'integration_test'
+      "
   env:
     -  GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
     - "BUCKET_PREFIX=local-grapl"
@@ -573,7 +583,13 @@ job=run-analyzer-deployer-unit-tests:
 job=run-analyzer-deployer-integration-tests:
   use: analyzer-deployer-build
   net-mode: grapl-integration-tests_default
-  command: /bin/bash -c "sleep 30 && source venv/bin/activate && cd analyzer-deployer && py.test -n auto -m 'integration_test'"
+  command: |
+    /bin/bash -c "
+      wait-for-it grapl-provision:8126 --timeout=60 &&
+      source venv/bin/activate &&
+      cd analyzer-deployer && 
+      py.test -n auto -m 'integration_test'
+      "
   env:
     -  GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
     - "BUCKET_PREFIX=local-grapl"
@@ -584,7 +600,13 @@ job=run-analyzer-deployer-integration-tests:
 job=run-e2e-integration-tests:
   use: grapl-e2e-tests-build
   net-mode: grapl-integration-tests_default
-  command: /bin/bash -c "sleep 30 && source venv/bin/activate && cd grapl_e2e_tests && python3 ./main.py"
+  command: | 
+    /bin/bash -c "
+      wait-for-it grapl-provision:8126 --timeout=60 &&
+      source venv/bin/activate && 
+      cd grapl_e2e_tests && 
+      python3 ./main.py
+      "
   env:
     -  GRAPL_LOG_LEVEL={env.GRAPL_LOG_LEVEL:INFO}
     - "BUCKET_PREFIX=local-grapl"
