--- a/src/python/analyzer_executor/Dockerfile
+++ b/src/python/analyzer_executor/Dockerfile
@@ -5,7 +5,8 @@ COPY --chown=grapl . analyzer_executor
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && cd analyzer_executor && pip install ."
 RUN cd venv/lib/python3.7/site-packages/ && zip --quiet -9r ~/lambda.zip ./
-RUN cd analyzer_executor/src/ && zip -g ~/lambda.zip ./analyzer-executor.py
+# cannot for the life of me figure out how to get **/* to work with this
+RUN cd analyzer_executor/src/ && zip -v -g ~/lambda.zip ./*.py ./analyzer_executor_lib/*.py
 RUN mkdir -p dist/analyzer-executor && cp ~/lambda.zip dist/analyzer-executor/lambda.zip
 
 FROM grapl/grapl-python-deploy AS grapl-analyzer-executor
