Add integration test for the sqs-executor, and include a fix for an issue that was found from it. The issue identified was due to the redis-rs library returning a different return type based on whether the length to the `get` command had a single entry or not. Additonally, this changes the cache API to take slices instead of Vec.

--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+integration = []
+
 [dependencies]
 grapl-observe = { path = "../grapl-observe" }
 grapl-utils = { path = "../grapl-utils" }
