--- a/etc/local_grapl/nginx_templates/default.conf.template
+++ b/etc/local_grapl/nginx_templates/default.conf.template
@@ -31,11 +31,11 @@ server {
   }
 
   location /static/ {
-    proxy_pass http://${GRAPL_UX_ROUTER_HOST}:${GRAPL_UX_ROUTER_PORT}$uri;
+    proxy_pass http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT}/restapis/${API_GATEWAY_API_ID}/prod/_user_request_/static/;
   }
 
   location / {
-    proxy_pass http://${GRAPL_UX_ROUTER_HOST}:${GRAPL_UX_ROUTER_PORT}$uri;
+    proxy_pass http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT}/restapis/${API_GATEWAY_API_ID}/prod/_user_request_/;
   }
 
 }
