--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -436,7 +436,7 @@ services:
       IS_LOCAL: "True"
       JWT_SECRET_ID: "JWT_SECRET_ID"
       PORT: ${GRAPL_GRAPHQL_PORT}
-      GRAPL_DISPLAY_TABLE: "${DEPLOYMENT_NAME}-grapl_display_table"
+      GRAPL_SCHEMA_PROPERTIES_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_properties_table"
       GRAPL_SCHEMA_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_table"
 
       <<: *secretsmanager-env
