--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -148,7 +148,9 @@ jobs:
       - name: Run integration tests
         run: |
           echo "unset RUSTC_WRAPPER" > rust_env.sh
-          GRAPL_RUST_ENV_FILE=rust_env.sh GRAPL_LOG_LEVEL=DEBUG make test-integration
+          GRAPL_RUST_ENV_FILE=rust_env.sh GRAPL_LOG_LEVEL=DEBUG \
+            ./build-support/retry.sh --sleep=0 --tries=2 -- \
+            make test-integration
 
       # NOTE: This requires >= py37
       # Unlike the e2e tests, we don't dump the database contents; strictly logs.
