[PR Feedback] Put test artifacts into one main directory
We'll still keep artifacts together in a timestamped directory, but
rather than having them proliferate directly in the repository root,
we'll put them all into a `test_artifacts` directory to keep things
tidy.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -155,7 +155,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: integration-test-artifacts
-          path: "artifacts_grapl-integration_tests_*"
+          path: "test_artifacts"
           retention-days: 28
 
 
@@ -193,5 +193,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: e2e-artifacts
-          path: "artifacts_grapl-e2e_tests_*"
+          path: "test_artifacts"
           retention-days: 28
