--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,6 @@ x-common-variables:
     AWS_REGION: ${AWS_REGION}
   dgraph-env: &dgraph-env
     MG_ALPHAS: ${MG_ALPHAS}
-  dynamodb-env: &dynamodb-env
-    DYNAMODB_ACCESS_KEY_ID: ${DYNAMODB_ACCESS_KEY_ID}
-    DYNAMODB_ACCESS_KEY_SECRET: ${DYNAMODB_ACCESS_KEY_SECRET}
-    DYNAMODB_ENDPOINT: ${DYNAMODB_ENDPOINT}
   # TODO: Ensure these are matched with what's in provision_local_identity_table.py
   dynamodb-mapping-tables: &dynamodb-mapping-tables
     ASSET_ID_MAPPINGS: ${DEPLOYMENT_NAME}-asset_id_mappings
@@ -34,18 +30,46 @@ x-common-variables:
   log-level: &log-level
     GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-ERROR}"
     RUST_LOG: "${RUST_LOG:-ERROR}"
+  dynamodb-env: &dynamodb-env
+    DYNAMODB_ACCESS_KEY_ID: ${DYNAMODB_ACCESS_KEY_ID}
+    DYNAMODB_ACCESS_KEY_SECRET: ${DYNAMODB_ACCESS_KEY_SECRET}
+    DYNAMODB_ENDPOINT: ${DYNAMODB_ENDPOINT}
   secretsmanager-env: &secretsmanager-env
     SECRETSMANAGER_ACCESS_KEY_ID: ${SECRETSMANAGER_ACCESS_KEY_ID}
     SECRETSMANAGER_ACCESS_KEY_SECRET: ${SECRETSMANAGER_ACCESS_KEY_SECRET}
     SECRETSMANAGER_ENDPOINT: ${SECRETSMANAGER_ENDPOINT}
-  s3-env: &s3-env
-    S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
-    S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
-    S3_ENDPOINT: ${S3_ENDPOINT}
   sqs-env: &sqs-env
     SQS_ACCESS_KEY_ID: ${SQS_ACCESS_KEY_ID}
     SQS_ACCESS_KEY_SECRET: ${SQS_ACCESS_KEY_SECRET}
     SQS_ENDPOINT: ${SQS_ENDPOINT}
+  sns-env: &sns-env
+    SNS_ACCESS_KEY_ID: ${SNS_ACCESS_KEY_ID}
+    SNS_ACCESS_KEY_SECRET: ${SNS_ACCESS_KEY_SECRET}
+    SNS_ENDPOINT: ${SNS_ENDPOINT}
+  ec2-env: &ec2-env
+    EC2_ACCESS_KEY_ID: ${EC2_ACCESS_KEY_ID}
+    EC2_ACCESS_KEY_SECRET: ${EC2_ACCESS_KEY_SECRET}
+    EC2_ENDPOINT: ${EC2_ENDPOINT}
+  ssm-env: &ssm-env
+    SSM_ACCESS_KEY_ID: ${SSM_ACCESS_KEY_ID}
+    SSM_ACCESS_KEY_SECRET: ${SSM_ACCESS_KEY_SECRET}
+    SSM_ENDPOINT: ${SSM_ENDPOINT}
+  cloudwatch-env: &cloudwatch-env
+    CLOUDWATCH_ACCESS_KEY_ID: ${CLOUDWATCH_ACCESS_KEY_ID}
+    CLOUDWATCH_ACCESS_KEY_SECRET: ${CLOUDWATCH_ACCESS_KEY_SECRET}
+    CLOUDWATCH_ENDPOINT: ${CLOUDWATCH_ENDPOINT}
+  route53-env: &route53-env
+    ROUTE53_ACCESS_KEY_ID: ${ROUTE53_ACCESS_KEY_ID}
+    ROUTE53_ACCESS_KEY_SECRET: ${ROUTE53_ACCESS_KEY_SECRET}
+    ROUTE53_ENDPOINT: ${ROUTE53_ENDPOINT}
+  lambda-env: &lambda-env
+    LAMBDA_ACCESS_KEY_ID: ${LAMBDA_ACCESS_KEY_ID}
+    LAMBDA_ACCESS_KEY_SECRET: ${LAMBDA_ACCESS_KEY_SECRET}
+    LAMBDA_ENDPOINT: ${LAMBDA_ENDPOINT}
+  s3-env: &s3-env
+    S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
+    S3_ACCESS_KEY_SECRET: ${S3_ACCESS_KEY_SECRET}
+    S3_ENDPOINT: ${S3_ENDPOINT}
   rust-backtrace: &rust-backtrace
     RUST_BACKTRACE: ${RUST_BACKTRACE}
 
@@ -485,21 +509,31 @@ services:
         condition: service_healthy
 
   grapl-provision:
-    image: grapl/grapl-provision:${TAG:-latest}
+    image: grapl/graplctl:${TAG:-latest}
     command: |
       /bin/bash -c "
-        export TIMEOUT=35 &&
-        . venv/bin/activate &&
-        python /home/grapl/grapl_local_provision/grapl_provision.py
+          graplctl \
+              --grapl-region us-east-1 \
+              --grapl-deployment-name local-grapl \
+              --grapl-version FIXME \
+              --aws-profile default \
+              aws provision --yes
       "
     environment:
       <<: *aws-region
-      <<: *dgraph-env
       <<: *dynamodb-env
       <<: *secretsmanager-env
-      GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-INFO}"
-      <<: *s3-env
       <<: *sqs-env
+      <<: *sns-env
+      <<: *ec2-env
+      <<: *ssm-env
+      <<: *cloudwatch-env
+      <<: *lambda-env
+      <<: *route53-env
+      <<: *s3-env
+      GRAPL_LOG_LEVEL: "${GRAPL_LOG_LEVEL:-INFO}"
+      AWS_ACCESS_KEY_ID: "${FAKE_AWS_ACCESS_KEY_ID}"
+      AWS_SECRET_ACCESS_KEY: "${FAKE_AWS_SECRET_ACCESS_KEY}"
     tty: true
     depends_on:
       dgraph:
