--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,9 +125,14 @@ services:
           export AWS_SECRET_ACCESS_KEY=${FAKE_AWS_SECRET_ACCESS_KEY} &&
           aws --endpoint-url=http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT} s3 ls
         '
+      # Probe failure during this period will not be counted towards the maximum number of retries
+      start_period: 30s
+      # Health check is executed every `interval` seconds.
       interval: 5s
+      # If a single run of the check takes longer than `timeout` seconds then the check is considered to have failed.
       timeout: 10s
-      start_period: 10s
+      # It takes `retries` consecutive failures of the health check for the container to be considered unhealthy.
+      retries: 3
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
