--- a/src/rust/node-identifier/Cargo.toml
+++ b/src/rust/node-identifier/Cargo.toml
@@ -56,6 +56,7 @@ hmap = "0.1"
 tracing = "0.1"
 chrono = "0.4"
 uuid = { version = "0.8", features=["v4"] }
+tap = "1"
 
 [dev-dependencies]
 quickcheck = "1"
